--- a/archives/toutiao-search/2024-04-18.md
+++ b/archives/toutiao-search/2024-04-18.md
@@ -1,41 +1,67 @@
 # 2024-04-18
 
-共 122 条
+共 144 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 18 2024 08:25:28 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Apr 18 2024 09:39:23 GMT+0800 (China Standard Time) -->
 1. [大V评换表新增1.7万欠费：公示明细](https://so.toutiao.com/search?keyword=大V评换表新增1.7万欠费：公示明细)
-1. [投资近2亿大桥围栏大片倒塌](https://so.toutiao.com/search?keyword=投资近2亿大桥围栏大片倒塌)
+1. [渣土车侧翻压扁4辆汽车](https://so.toutiao.com/search?keyword=渣土车侧翻压扁4辆汽车)
 1. [从三个账本看春耕春管新变化](https://so.toutiao.com/search?keyword=从三个账本看春耕春管新变化)
-1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
+1. [人在海南 成都家中产生500立方用气量](https://so.toutiao.com/search?keyword=人在海南+成都家中产生500立方用气量)
+1. [曝广西南宁春节发生4死血案](https://so.toutiao.com/search?keyword=曝广西南宁春节发生4死血案)
+1. [全红婵或将收获冠军大满贯](https://so.toutiao.com/search?keyword=全红婵或将收获冠军大满贯)
+1. [阿联酋突遭75年来最大降雨](https://so.toutiao.com/search?keyword=阿联酋突遭75年来最大降雨)
+1. [网红飞飞一杯酒去世](https://so.toutiao.com/search?keyword=网红飞飞一杯酒去世)
+1. [父女同住一套房12年来不说话](https://so.toutiao.com/search?keyword=父女同住一套房12年来不说话)
+1. [27岁民警遭持刀袭击牺牲](https://so.toutiao.com/search?keyword=27岁民警遭持刀袭击牺牲)
+1. [女子感冒医院输错药身亡？官方回应](https://so.toutiao.com/search?keyword=女子感冒医院输错药身亡？官方回应)
+1. [南宁楼房倒塌人像饺子往下掉？假的](https://so.toutiao.com/search?keyword=南宁楼房倒塌人像饺子往下掉？假的)
+1. [郭德纲曝郭麒麟曾带女孩回家见家长](https://so.toutiao.com/search?keyword=郭德纲曝郭麒麟曾带女孩回家见家长)
+1. [欧冠4强出炉 英超全军覆没](https://so.toutiao.com/search?keyword=欧冠4强出炉+英超全军覆没)
+1. [驻迪拜总领馆提醒公民关注天气变化](https://so.toutiao.com/search?keyword=驻迪拜总领馆提醒公民关注天气变化)
+1. [燃气公司称换表后费用上涨或是错觉](https://so.toutiao.com/search?keyword=燃气公司称换表后费用上涨或是错觉)
 1. [小米汽车已动员所有供应商提高产能](https://so.toutiao.com/search?keyword=小米汽车已动员所有供应商提高产能)
 1. [阿联酋一天下了一年的雨](https://so.toutiao.com/search?keyword=阿联酋一天下了一年的雨)
-1. [企业家称返乡投资6亿遭政府违约](https://so.toutiao.com/search?keyword=企业家称返乡投资6亿遭政府违约)
+1. [投资近2亿大桥围栏大片倒塌](https://so.toutiao.com/search?keyword=投资近2亿大桥围栏大片倒塌)
 1. [亚洲货币贬值潮要来了吗](https://so.toutiao.com/search?keyword=亚洲货币贬值潮要来了吗)
-1. [国乒12人出战世界杯11人小组赛晋级](https://so.toutiao.com/search?keyword=国乒12人出战世界杯11人小组赛晋级)
+1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
 1. [朔尔茨3天中国行谈了哪些热点问题](https://so.toutiao.com/search?keyword=朔尔茨3天中国行谈了哪些热点问题)
-1. [驻迪拜总领馆提醒公民关注天气变化](https://so.toutiao.com/search?keyword=驻迪拜总领馆提醒公民关注天气变化)
-1. [南宁楼房倒塌人像饺子往下掉？假的](https://so.toutiao.com/search?keyword=南宁楼房倒塌人像饺子往下掉？假的)
-1. [广西南宁被曝春节血案致4死](https://so.toutiao.com/search?keyword=广西南宁被曝春节血案致4死)
-1. [曝女子在养生馆被丈夫从床上拽下打](https://so.toutiao.com/search?keyword=曝女子在养生馆被丈夫从床上拽下打)
-1. [网红飞飞一杯酒去世](https://so.toutiao.com/search?keyword=网红飞飞一杯酒去世)
-1. [燃气公司称换表后费用上涨或是错觉](https://so.toutiao.com/search?keyword=燃气公司称换表后费用上涨或是错觉)
-1. [交警检查时看到男子的头盔笑了](https://so.toutiao.com/search?keyword=交警检查时看到男子的头盔笑了)
-1. [特斯拉万人大裁员轰动美国](https://so.toutiao.com/search?keyword=特斯拉万人大裁员轰动美国)
-1. [36岁女子存300万后提前退休](https://so.toutiao.com/search?keyword=36岁女子存300万后提前退休)
-1. [小米SU7单周销量登顶](https://so.toutiao.com/search?keyword=小米SU7单周销量登顶)
-1. [外媒曝俄乌2022年谈判破裂原因](https://so.toutiao.com/search?keyword=外媒曝俄乌2022年谈判破裂原因)
-1. [媒体：为了两张饼菲律宾把自己卖了](https://so.toutiao.com/search?keyword=媒体：为了两张饼菲律宾把自己卖了)
-1. [老旧小区原拆原建 居民自筹4.7亿](https://so.toutiao.com/search?keyword=老旧小区原拆原建+居民自筹4.7亿)
-1. [茶企老板一家3口遇害 嫌犯系其弟弟](https://so.toutiao.com/search?keyword=茶企老板一家3口遇害+嫌犯系其弟弟)
-1. [调查组进驻重庆燃气集团倒查三年账](https://so.toutiao.com/search?keyword=调查组进驻重庆燃气集团倒查三年账)
-1. [泽连斯基：中国可以加速和平进程](https://so.toutiao.com/search?keyword=泽连斯基：中国可以加速和平进程)
+1. [欧弟说想卖跑车养女儿](https://so.toutiao.com/search?keyword=欧弟说想卖跑车养女儿)
 1. [知名编剧称外出俩月烧500多方燃气](https://so.toutiao.com/search?keyword=知名编剧称外出俩月烧500多方燃气)
+1. [中国2月持有美国国债减少227亿美元](https://so.toutiao.com/search?keyword=中国2月持有美国国债减少227亿美元)
+1. [乌承认前线俄乌炮弹比例已达10比1](https://so.toutiao.com/search?keyword=乌承认前线俄乌炮弹比例已达10比1)
+1. [曝女子在养生馆被丈夫从床上拽下打](https://so.toutiao.com/search?keyword=曝女子在养生馆被丈夫从床上拽下打)
+1. [国乒12人出战世界杯11人小组赛晋级](https://so.toutiao.com/search?keyword=国乒12人出战世界杯11人小组赛晋级)
+1. [伊朗无人机开灯袭击以色列是真的吗](https://so.toutiao.com/search?keyword=伊朗无人机开灯袭击以色列是真的吗)
+1. [日媒：中国短剧登陆日本](https://so.toutiao.com/search?keyword=日媒：中国短剧登陆日本)
+1. [AI刘强东直播首秀成交额超5000万元](https://so.toutiao.com/search?keyword=AI刘强东直播首秀成交额超5000万元)
+1. [企业家称返乡投资6亿遭政府违约](https://so.toutiao.com/search?keyword=企业家称返乡投资6亿遭政府违约)
+1. [36岁女子存300万后提前退休](https://so.toutiao.com/search?keyword=36岁女子存300万后提前退休)
+1. [光刻机巨头阿斯麦业绩爆雷](https://so.toutiao.com/search?keyword=光刻机巨头阿斯麦业绩爆雷)
+1. [泽连斯基：中国可以加速和平进程](https://so.toutiao.com/search?keyword=泽连斯基：中国可以加速和平进程)
+1. [茶企老板一家3口遇害 嫌犯系其弟弟](https://so.toutiao.com/search?keyword=茶企老板一家3口遇害+嫌犯系其弟弟)
+1. [强对流天气黄警 多地有10级雷暴大风](https://so.toutiao.com/search?keyword=强对流天气黄警+多地有10级雷暴大风)
+1. [主持人谈朔尔茨访华](https://so.toutiao.com/search?keyword=主持人谈朔尔茨访华)
+1. [招牌统一的城市营商环境不好？](https://so.toutiao.com/search?keyword=招牌统一的城市营商环境不好？)
+1. [中方从美追索38件流失文物艺术品](https://so.toutiao.com/search?keyword=中方从美追索38件流失文物艺术品)
+1. [湖北一地文旅局长闪现西安送门票](https://so.toutiao.com/search?keyword=湖北一地文旅局长闪现西安送门票)
+1. [詹俊：皇马有14冠王底蕴](https://so.toutiao.com/search?keyword=詹俊：皇马有14冠王底蕴)
+1. [网传重庆换水表引网友担忧](https://so.toutiao.com/search?keyword=网传重庆换水表引网友担忧)
+1. [东部战区发言人现新面孔 出自海军](https://so.toutiao.com/search?keyword=东部战区发言人现新面孔+出自海军)
+1. [小米SU7单周销量登顶](https://so.toutiao.com/search?keyword=小米SU7单周销量登顶)
+1. [交警检查时看到男子的头盔笑了](https://so.toutiao.com/search?keyword=交警检查时看到男子的头盔笑了)
+1. [媒体：为了两张饼菲律宾把自己卖了](https://so.toutiao.com/search?keyword=媒体：为了两张饼菲律宾把自己卖了)
+1. [主播回应撞脸命案逃犯：已报警](https://so.toutiao.com/search?keyword=主播回应撞脸命案逃犯：已报警)
+1. [沈富雄分析赖清德第三波人事布局](https://so.toutiao.com/search?keyword=沈富雄分析赖清德第三波人事布局)
 1. [《城中之城》赵辉被人举报](https://so.toutiao.com/search?keyword=《城中之城》赵辉被人举报)
+1. [广西南宁被曝春节血案致4死](https://so.toutiao.com/search?keyword=广西南宁被曝春节血案致4死)
+1. [特斯拉万人大裁员轰动美国](https://so.toutiao.com/search?keyword=特斯拉万人大裁员轰动美国)
+1. [外媒曝俄乌2022年谈判破裂原因](https://so.toutiao.com/search?keyword=外媒曝俄乌2022年谈判破裂原因)
+1. [老旧小区原拆原建 居民自筹4.7亿](https://so.toutiao.com/search?keyword=老旧小区原拆原建+居民自筹4.7亿)
+1. [调查组进驻重庆燃气集团倒查三年账](https://so.toutiao.com/search?keyword=调查组进驻重庆燃气集团倒查三年账)
 1. [美媒：以色列准备多款战机打击伊朗](https://so.toutiao.com/search?keyword=美媒：以色列准备多款战机打击伊朗)
 1. [央媒评女子躺座椅致航班延误](https://so.toutiao.com/search?keyword=央媒评女子躺座椅致航班延误)
 1. [“提灯定损”村庄的违建会全拆吗](https://so.toutiao.com/search?keyword=“提灯定损”村庄的违建会全拆吗)
-1. [沈富雄分析赖清德第三波人事布局](https://so.toutiao.com/search?keyword=沈富雄分析赖清德第三波人事布局)
 1. [于东来称员工最低收入到手近8000元](https://so.toutiao.com/search?keyword=于东来称员工最低收入到手近8000元)
 1. [官方回应男子被扣电动车电瓶丢失](https://so.toutiao.com/search?keyword=官方回应男子被扣电动车电瓶丢失)
 1. [德媒引用《孙子兵法》谈朔尔茨访华](https://so.toutiao.com/search?keyword=德媒引用《孙子兵法》谈朔尔茨访华)
@@ -44,12 +70,9 @@
 1. [台名嘴：大陆的导弹奇准无比](https://so.toutiao.com/search?keyword=台名嘴：大陆的导弹奇准无比)
 1. [“鸿茅药酒事件”当事人卖书求生](https://so.toutiao.com/search?keyword=“鸿茅药酒事件”当事人卖书求生)
 1. [全国房价比顶峰下降21%](https://so.toutiao.com/search?keyword=全国房价比顶峰下降21%)
-1. [招牌统一的城市营商环境不好？](https://so.toutiao.com/search?keyword=招牌统一的城市营商环境不好？)
-1. [东部战区发言人现新面孔 出自海军](https://so.toutiao.com/search?keyword=东部战区发言人现新面孔+出自海军)
 1. [载非法移民快艇登陆加州富人区海岸](https://so.toutiao.com/search?keyword=载非法移民快艇登陆加州富人区海岸)
 1. [老人买一张坐票占三个座自称腰疼](https://so.toutiao.com/search?keyword=老人买一张坐票占三个座自称腰疼)
 1. [警方回应男子用玻璃杯暴打妻子](https://so.toutiao.com/search?keyword=警方回应男子用玻璃杯暴打妻子)
-1. [主播回应撞脸命案逃犯：已报警](https://so.toutiao.com/search?keyword=主播回应撞脸命案逃犯：已报警)
 1. [波士顿动力人形机器人Atlas退役](https://so.toutiao.com/search?keyword=波士顿动力人形机器人Atlas退役)
 1. [长城给大力仑造了一台大力仑炮](https://so.toutiao.com/search?keyword=长城给大力仑造了一台大力仑炮)
 1. [德国汽车业希望避免与中国决裂](https://so.toutiao.com/search?keyword=德国汽车业希望避免与中国决裂)
@@ -82,7 +105,6 @@
 1. [被困于法庭的特朗普还能继续参选吗](https://so.toutiao.com/search?keyword=被困于法庭的特朗普还能继续参选吗)
 1. [江西一种植户30多个大棚因大风全毁](https://so.toutiao.com/search?keyword=江西一种植户30多个大棚因大风全毁)
 1. [女子躺座椅上拒不下飞机致航班延误](https://so.toutiao.com/search?keyword=女子躺座椅上拒不下飞机致航班延误)
-1. [网传重庆换水表引网友担忧](https://so.toutiao.com/search?keyword=网传重庆换水表引网友担忧)
 1. [曝皇马次回合战曼城将身穿深色球衣](https://so.toutiao.com/search?keyword=曝皇马次回合战曼城将身穿深色球衣)
 1. [官方回应石家庄一小区上百居民腹泻](https://so.toutiao.com/search?keyword=官方回应石家庄一小区上百居民腹泻)
 1. [《承欢记》姚志明也是奶奶的遗产](https://so.toutiao.com/search?keyword=《承欢记》姚志明也是奶奶的遗产)
