--- a/archives/toutiao-search/2024-04-18.md
+++ b/archives/toutiao-search/2024-04-18.md
@@ -1,83 +1,95 @@
 # 2024-04-18
 
-共 213 条
+共 225 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 18 2024 13:01:05 GMT+0800 (China Standard Time) -->
-1. [华为Pura 70系列真机体验](https://so.toutiao.com/search?keyword=华为Pura+70系列真机体验)
-1. [中国人亲历迪拜暴雨：酒店厨房被淹](https://so.toutiao.com/search?keyword=中国人亲历迪拜暴雨：酒店厨房被淹)
+<!-- 最后更新时间 Thu Apr 18 2024 14:07:43 GMT+0800 (China Standard Time) -->
+1. [华为Pura 70 Ultra搭载伸缩摄像头](https://so.toutiao.com/search?keyword=华为Pura+70 Ultra搭载伸缩摄像头)
+1. [实拍广州暴雨瞬间白昼变夜晚](https://so.toutiao.com/search?keyword=实拍广州暴雨瞬间白昼变夜晚)
 1. [三个维度读懂“中国第一展”的热度](https://so.toutiao.com/search?keyword=三个维度读懂“中国第一展”的热度)
-1. [直击华为Pura70系列手机开售现场](https://so.toutiao.com/search?keyword=直击华为Pura70系列手机开售现场)
-1. [伊朗总统在阅兵式上喊话以色列](https://so.toutiao.com/search?keyword=伊朗总统在阅兵式上喊话以色列)
+1. [中国人亲历迪拜暴雨：酒店厨房被淹](https://so.toutiao.com/search?keyword=中国人亲历迪拜暴雨：酒店厨房被淹)
+1. [华为Pura70系列全颜色上手](https://so.toutiao.com/search?keyword=华为Pura70系列全颜色上手)
 1. [女子被公公扇耳光后下跪 妇联介入](https://so.toutiao.com/search?keyword=女子被公公扇耳光后下跪+妇联介入)
 1. [社保专家谈调整养老金领取年龄](https://so.toutiao.com/search?keyword=社保专家谈调整养老金领取年龄)
+1. [伊朗总统在阅兵式上喊话以色列](https://so.toutiao.com/search?keyword=伊朗总统在阅兵式上喊话以色列)
+1. [9岁男孩疑似因长期体罚跳楼身亡](https://so.toutiao.com/search?keyword=9岁男孩疑似因长期体罚跳楼身亡)
 1. [老人在成都居家4个月燃气费1.5万](https://so.toutiao.com/search?keyword=老人在成都居家4个月燃气费1.5万)
-1. [实拍广州暴雨瞬间白昼变夜晚](https://so.toutiao.com/search?keyword=实拍广州暴雨瞬间白昼变夜晚)
-1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
-1. [华为Pura70系列约一分钟售罄](https://so.toutiao.com/search?keyword=华为Pura70系列约一分钟售罄)
-1. [南宁楼房倒塌人像饺子往下掉？假的](https://so.toutiao.com/search?keyword=南宁楼房倒塌人像饺子往下掉？假的)
 1. [反对调休的声音不能装作听不到](https://so.toutiao.com/search?keyword=反对调休的声音不能装作听不到)
+1. [南宁楼房倒塌人像饺子往下掉？假的](https://so.toutiao.com/search?keyword=南宁楼房倒塌人像饺子往下掉？假的)
+1. [浙江已有2个老旧小区推倒重建](https://so.toutiao.com/search?keyword=浙江已有2个老旧小区推倒重建)
+1. [新娘突然去世几十万彩礼怎么办](https://so.toutiao.com/search?keyword=新娘突然去世几十万彩礼怎么办)
+1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
+1. [男子被查酒驾自称是纪委的人遭怼](https://so.toutiao.com/search?keyword=男子被查酒驾自称是纪委的人遭怼)
+1. [二本女孩跨专业考研上岸双一流](https://so.toutiao.com/search?keyword=二本女孩跨专业考研上岸双一流)
+1. [中菲曾达成“秘密协定”？中方回应](https://so.toutiao.com/search?keyword=中菲曾达成“秘密协定”？中方回应)
+1. [居民爆料2名青少年持刀街头堵人](https://so.toutiao.com/search?keyword=居民爆料2名青少年持刀街头堵人)
+1. [钟南山发文悼念沈华浩](https://so.toutiao.com/search?keyword=钟南山发文悼念沈华浩)
+1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
+1. [投资两亿大桥围栏倒塌真是风太大吗](https://so.toutiao.com/search?keyword=投资两亿大桥围栏倒塌真是风太大吗)
+1. [中方支持巴勒斯坦正式加入联合国](https://so.toutiao.com/search?keyword=中方支持巴勒斯坦正式加入联合国)
+1. [父女同住一套房12年来不说话](https://so.toutiao.com/search?keyword=父女同住一套房12年来不说话)
+1. [成都重庆燃气集团股东涉同家公司](https://so.toutiao.com/search?keyword=成都重庆燃气集团股东涉同家公司)
+1. [女子感冒医院输错药身亡？官方回应](https://so.toutiao.com/search?keyword=女子感冒医院输错药身亡？官方回应)
+1. [波士顿动力推出电动人形机器人](https://so.toutiao.com/search?keyword=波士顿动力推出电动人形机器人)
+1. [人在海南 成都家中产生500立方用气量](https://so.toutiao.com/search?keyword=人在海南+成都家中产生500立方用气量)
+1. [郭德纲曝郭麒麟曾带女孩回家见家长](https://so.toutiao.com/search?keyword=郭德纲曝郭麒麟曾带女孩回家见家长)
+1. [美军在菲律宾部署中程导弹意欲何为](https://so.toutiao.com/search?keyword=美军在菲律宾部署中程导弹意欲何为)
+1. [光刻机巨头阿斯麦业绩爆雷](https://so.toutiao.com/search?keyword=光刻机巨头阿斯麦业绩爆雷)
+1. [菲律宾狐假虎威昏了头](https://so.toutiao.com/search?keyword=菲律宾狐假虎威昏了头)
+1. [“开封王婆”江西说媒首日促成多对](https://so.toutiao.com/search?keyword=“开封王婆”江西说媒首日促成多对)
+1. [伊朗军事能力有多强](https://so.toutiao.com/search?keyword=伊朗军事能力有多强)
+1. [金价大涨背后将是通胀时代吗](https://so.toutiao.com/search?keyword=金价大涨背后将是通胀时代吗)
+1. [暴雨前曾7次人工催雨？阿联酋否认](https://so.toutiao.com/search?keyword=暴雨前曾7次人工催雨？阿联酋否认)
+1. [新款问界M5预售12小时订单破万](https://so.toutiao.com/search?keyword=新款问界M5预售12小时订单破万)
+1. [《奔跑吧》大型过生日现场](https://so.toutiao.com/search?keyword=《奔跑吧》大型过生日现场)
+1. [核酸大王张核子回应张珊珊身份](https://so.toutiao.com/search?keyword=核酸大王张核子回应张珊珊身份)
+1. [南宁春节期间发生4死刑案 嫌犯被捕](https://so.toutiao.com/search?keyword=南宁春节期间发生4死刑案+嫌犯被捕)
+1. [美国为何又要对伊朗实施新制裁](https://so.toutiao.com/search?keyword=美国为何又要对伊朗实施新制裁)
+1. [乌军称成功袭击克里米亚占科伊机场](https://so.toutiao.com/search?keyword=乌军称成功袭击克里米亚占科伊机场)
+1. [已有15万件流失海外的中国文物回归](https://so.toutiao.com/search?keyword=已有15万件流失海外的中国文物回归)
+1. [大V：患者不想死 家属拔管涉嫌犯罪](https://so.toutiao.com/search?keyword=大V：患者不想死+家属拔管涉嫌犯罪)
+1. [中国仍是ASML的最大市场](https://so.toutiao.com/search?keyword=中国仍是ASML的最大市场)
+1. [调来调去 我们的假期还能怎么休](https://so.toutiao.com/search?keyword=调来调去+我们的假期还能怎么休)
+1. [美媒：美国国债越来越难卖](https://so.toutiao.com/search?keyword=美媒：美国国债越来越难卖)
+1. [台评论员：马英九后“蓝委”争相访陆](https://so.toutiao.com/search?keyword=台评论员：马英九后“蓝委”争相访陆)
+1. [阿联酋突遭75年来最大降雨](https://so.toutiao.com/search?keyword=阿联酋突遭75年来最大降雨)
+1. [中国2月持有美国国债减少227亿美元](https://so.toutiao.com/search?keyword=中国2月持有美国国债减少227亿美元)
+1. [华为Pura 70系列真机体验](https://so.toutiao.com/search?keyword=华为Pura+70系列真机体验)
+1. [直击华为Pura70系列手机开售现场](https://so.toutiao.com/search?keyword=直击华为Pura70系列手机开售现场)
+1. [华为Pura70系列约一分钟售罄](https://so.toutiao.com/search?keyword=华为Pura70系列约一分钟售罄)
 1. [欧冠4强出炉 英超全军覆没](https://so.toutiao.com/search?keyword=欧冠4强出炉+英超全军覆没)
 1. [华为Pura 70开售 顶配售价过万](https://so.toutiao.com/search?keyword=华为Pura+70开售 顶配售价过万)
 1. [慢直播广州全市暴雨](https://so.toutiao.com/search?keyword=慢直播广州全市暴雨)
-1. [金价大涨背后将是通胀时代吗](https://so.toutiao.com/search?keyword=金价大涨背后将是通胀时代吗)
-1. [“开封王婆”江西说媒首日促成多对](https://so.toutiao.com/search?keyword=“开封王婆”江西说媒首日促成多对)
-1. [中方支持巴勒斯坦正式加入联合国](https://so.toutiao.com/search?keyword=中方支持巴勒斯坦正式加入联合国)
-1. [成都重庆燃气集团股东涉同家公司](https://so.toutiao.com/search?keyword=成都重庆燃气集团股东涉同家公司)
-1. [投资两亿大桥围栏倒塌真是风太大吗](https://so.toutiao.com/search?keyword=投资两亿大桥围栏倒塌真是风太大吗)
-1. [中菲曾达成“秘密协定”？中方回应](https://so.toutiao.com/search?keyword=中菲曾达成“秘密协定”？中方回应)
-1. [菲律宾狐假虎威昏了头](https://so.toutiao.com/search?keyword=菲律宾狐假虎威昏了头)
-1. [调来调去 我们的假期还能怎么休](https://so.toutiao.com/search?keyword=调来调去+我们的假期还能怎么休)
-1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
-1. [光刻机巨头阿斯麦业绩爆雷](https://so.toutiao.com/search?keyword=光刻机巨头阿斯麦业绩爆雷)
-1. [居民爆料2名青少年持刀街头堵人](https://so.toutiao.com/search?keyword=居民爆料2名青少年持刀街头堵人)
-1. [波士顿动力推出电动人形机器人](https://so.toutiao.com/search?keyword=波士顿动力推出电动人形机器人)
-1. [大V：患者不想死 家属拔管涉嫌犯罪](https://so.toutiao.com/search?keyword=大V：患者不想死+家属拔管涉嫌犯罪)
-1. [女子感冒医院输错药身亡？官方回应](https://so.toutiao.com/search?keyword=女子感冒医院输错药身亡？官方回应)
-1. [人在海南 成都家中产生500立方用气量](https://so.toutiao.com/search?keyword=人在海南+成都家中产生500立方用气量)
-1. [中国仍是ASML的最大市场](https://so.toutiao.com/search?keyword=中国仍是ASML的最大市场)
-1. [南宁春节期间发生4死刑案 嫌犯被捕](https://so.toutiao.com/search?keyword=南宁春节期间发生4死刑案+嫌犯被捕)
 1. [广州遭遇大风大雨冰雹多趟航班延误](https://so.toutiao.com/search?keyword=广州遭遇大风大雨冰雹多趟航班延误)
-1. [郭德纲曝郭麒麟曾带女孩回家见家长](https://so.toutiao.com/search?keyword=郭德纲曝郭麒麟曾带女孩回家见家长)
 1. [燃气公司用“错觉”回应民众合理吗](https://so.toutiao.com/search?keyword=燃气公司用“错觉”回应民众合理吗)
-1. [伊朗军事能力有多强](https://so.toutiao.com/search?keyword=伊朗军事能力有多强)
 1. [王毅：各方应将南海建成和平之海](https://so.toutiao.com/search?keyword=王毅：各方应将南海建成和平之海)
-1. [暴雨前曾7次人工催雨？阿联酋否认](https://so.toutiao.com/search?keyword=暴雨前曾7次人工催雨？阿联酋否认)
 1. [菲总统避谈美国是否会为菲对华开战](https://so.toutiao.com/search?keyword=菲总统避谈美国是否会为菲对华开战)
-1. [美国为何又要对伊朗实施新制裁](https://so.toutiao.com/search?keyword=美国为何又要对伊朗实施新制裁)
 1. [淄博：八大局里探寻“复烤”密码](https://so.toutiao.com/search?keyword=淄博：八大局里探寻“复烤”密码)
 1. [4月以来20个大宗商品中有16个上涨](https://so.toutiao.com/search?keyword=4月以来20个大宗商品中有16个上涨)
 1. [大V评换表新增1.7万欠费：公示明细](https://so.toutiao.com/search?keyword=大V评换表新增1.7万欠费：公示明细)
 1. [邱毅谈马英九访陆如何搅动台湾政局](https://so.toutiao.com/search?keyword=邱毅谈马英九访陆如何搅动台湾政局)
 1. [拦精灵屏蔽芒果TV广告被判赔9万](https://so.toutiao.com/search?keyword=拦精灵屏蔽芒果TV广告被判赔9万)
-1. [美媒：美国国债越来越难卖](https://so.toutiao.com/search?keyword=美媒：美国国债越来越难卖)
 1. [公牛擒老鹰 将同热火争季后赛资格](https://so.toutiao.com/search?keyword=公牛擒老鹰+将同热火争季后赛资格)
 1. [黎真主党武装袭击以军目标致18伤](https://so.toutiao.com/search?keyword=黎真主党武装袭击以军目标致18伤)
-1. [已有15万件流失海外的中国文物回归](https://so.toutiao.com/search?keyword=已有15万件流失海外的中国文物回归)
 1. [华为Pura 70开售](https://so.toutiao.com/search?keyword=华为Pura+70开售)
 1. [华为Pura 70被曝搭载全新处理器](https://so.toutiao.com/search?keyword=华为Pura+70被曝搭载全新处理器)
 1. [华为Pura 70顶配售价过万](https://so.toutiao.com/search?keyword=华为Pura+70顶配售价过万)
 1. [欧弟说想卖跑车养女儿](https://so.toutiao.com/search?keyword=欧弟说想卖跑车养女儿)
-1. [美军在菲律宾部署中程导弹意欲何为](https://so.toutiao.com/search?keyword=美军在菲律宾部署中程导弹意欲何为)
 1. [大V：下铺让坐是人情不让是本分](https://so.toutiao.com/search?keyword=大V：下铺让坐是人情不让是本分)
-1. [核酸大王张核子回应张珊珊身份](https://so.toutiao.com/search?keyword=核酸大王张核子回应张珊珊身份)
 1. [3月份中国境内外金价溢价有所回落](https://so.toutiao.com/search?keyword=3月份中国境内外金价溢价有所回落)
 1. [驻日领馆提醒中国公民注意防范余震](https://so.toutiao.com/search?keyword=驻日领馆提醒中国公民注意防范余震)
 1. [27岁民警遭持刀袭击牺牲](https://so.toutiao.com/search?keyword=27岁民警遭持刀袭击牺牲)
 1. [渣土车侧翻压扁4辆汽车](https://so.toutiao.com/search?keyword=渣土车侧翻压扁4辆汽车)
 1. [专家：铺位使用权仅限于该购票乘客](https://so.toutiao.com/search?keyword=专家：铺位使用权仅限于该购票乘客)
-1. [中国2月持有美国国债减少227亿美元](https://so.toutiao.com/search?keyword=中国2月持有美国国债减少227亿美元)
 1. [伊朗无人机开灯袭击以色列是真的吗](https://so.toutiao.com/search?keyword=伊朗无人机开灯袭击以色列是真的吗)
 1. [从三个账本看春耕春管新变化](https://so.toutiao.com/search?keyword=从三个账本看春耕春管新变化)
 1. [男子因交通事故当街暴打女子](https://so.toutiao.com/search?keyword=男子因交通事故当街暴打女子)
 1. [专家称养老制度一开始就背负着空账](https://so.toutiao.com/search?keyword=专家称养老制度一开始就背负着空账)
-1. [阿联酋突遭75年来最大降雨](https://so.toutiao.com/search?keyword=阿联酋突遭75年来最大降雨)
 1. [泰国男子当街教训袭胸女儿的醉汉](https://so.toutiao.com/search?keyword=泰国男子当街教训袭胸女儿的醉汉)
 1. [日本民众起诉日本政府和东电](https://so.toutiao.com/search?keyword=日本民众起诉日本政府和东电)
 1. [雷军宣布将抖音直播送SU7车模](https://so.toutiao.com/search?keyword=雷军宣布将抖音直播送SU7车模)
 1. [驻迪拜总领馆提醒公民关注极端暴雨](https://so.toutiao.com/search?keyword=驻迪拜总领馆提醒公民关注极端暴雨)
 1. [58岁阿姨喝水太少确诊败血症](https://so.toutiao.com/search?keyword=58岁阿姨喝水太少确诊败血症)
-1. [父女同住一套房12年来不说话](https://so.toutiao.com/search?keyword=父女同住一套房12年来不说话)
 1. [投资近2亿大桥围栏大片倒塌](https://so.toutiao.com/search?keyword=投资近2亿大桥围栏大片倒塌)
 1. [男子骑电动车逆行撞自行车被判全责](https://so.toutiao.com/search?keyword=男子骑电动车逆行撞自行车被判全责)
 1. [曝女子在养生馆被丈夫从床上拽下打](https://so.toutiao.com/search?keyword=曝女子在养生馆被丈夫从床上拽下打)
